force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/analyticsengine__Report_Sender_Log__c.object-meta.xml
<CustomObject>
    <label>Report Sender Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Sender Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>