force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>