force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Log_File__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Log_File__c</fullName>
    <label>Log File</label>
    <length>18</length>
    <type>Text</type>
</CustomField>