force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Number_of_Recipients__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Number_of_Recipients__c</fullName>
    <label>Number of Recipients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>