force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Recipients__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Recipients__c</fullName>
    <label>Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>