force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Running_User__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is user who started Report Sender job</description>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RunningUser_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>