force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Running_User_Locale__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Running_User_Locale__c</fullName>
    <label>Running User - Locale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>