force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Running_User_Timezone__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Running_User_Timezone__c</fullName>
    <label>Running User - Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>