force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Schedule_Owner__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Schedule_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Report_Sender_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>