force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Schedule_Owner_Locale__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Schedule_Owner_Locale__c</fullName>
    <label>Schedule Owner - Locale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>