force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Schedule_Owner_Timezone__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Schedule_Owner_Timezone__c</fullName>
    <label>Schedule Owner - Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>