force-app/main/default/objects/analyticsengine__Report_Sender_Log__c/fields/analyticsengine__Status__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>